--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <a class="menu-bar">أخبار <i class="fas fa-newspaper"></i></a>
         <a class="menu-bar">مقالات <i class="fal fa-newspaper"></i></a>
         <a class="menu-bar">إعلانات <i class="fas fa-user-headset"></i></a>
-        <img src="yassine.png" class="logo" alt="logo">
+        <a class="menu-bar">yassine<i class="fas fa-signal-stream"></i></a>
     </div>
-    
+        <img src="yassine.png" class="logo" alt="logo">
     <main>
         <div class="c1">
             <a href=""><img src="image/01.jpg" alt=""></a>
