--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="fontawesome-pro/css/all.css">
+    <link rel="stylesheet" href="fontawesome-free/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body id="body-theme">
     <div class="menu">
-        <a class="menu-bar">الرئيسية <i class="fas fa-home-lg"></i></a>
+        <a class="menu-bar">الرئيسية <i class="fas fa-home"></i></a>
         <a class="menu-bar">أخبار <i class="fas fa-newspaper"></i></a>
-        <a class="menu-bar">مقالات <i class="fal fa-newspaper"></i></a>
-        <a class="menu-bar">إعلانات <i class="fas fa-user-headset"></i></a>
-        <a class="menu-bar">yassine<i class="fas fa-signal-stream"></i></a>
+        <a class="menu-bar">مقالات <i class="far fa-newspaper"></i></i></a>
+        <a class="menu-bar">إعلانات <i class="fas fa-headset"></i></a>
     </div>
         <img src="yassine.png" class="logo" alt="logo">
     <main>
