--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
     <br /><br />
 
     <div class="serech-box">
-        <input type="search" name="seatch" placeholder="seatch" class="seatch">
+        <input type="search" name="search" placeholder="search" class="search">
     </div>
 
     <section class="whois">
