--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Markazi+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome-free/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -17,8 +18,14 @@
         <a class="menu-bar">أخبار <i class="fas fa-newspaper"></i></a>
         <a class="menu-bar">مقالات <i class="far fa-newspaper"></i></i></a>
         <a class="menu-bar">إعلانات <i class="fas fa-headset"></i></a>
+        <form action="">
+            <input type="search" class="search" name="search" placeholder="Search" id="">
+            <input type="submit" value="Search">
+        </form>
     </div>
-        <img src="yassine.png" class="logo" alt="logo">
+        <div class="news-bar">
+            <p>هنا ستكون عناوين آخر الأخبار و المقالات</p>
+        </div>
     <main>
         <div class="c1">
             <a href=""><img src="image/01.jpg" alt=""></a>
@@ -32,9 +39,5 @@
             <a href=""><img src="image/05.jpg" alt=""></a>
         </div>
     </main>
-
-    <footer>
-        
-    </footer>
 </body>
 </html>
