--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Markazi+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lateef&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome-free/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -39,5 +40,57 @@
             <a href=""><img src="image/05.jpg" alt=""></a>
         </div>
     </main>
+    <h1>:آخر الأخبار</h1>
+    <section>
+        <div class="news-tech">
+            <a href="">
+                <img src="image/06.jpg" alt="">
+                <h2>
+                        كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
+                </h2>
+            </a>
+        </div>
+        <div class="news-tech">
+            <a href="">
+                <img src="image/07.jpg" alt="">
+                <h2>
+                        كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
+                </h2>
+            </a>
+        </div>
+        <div class="news-tech">
+            <a href="">
+                <img src="image/08.jpg" alt="">
+                <h2>
+                        كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
+                </h2>
+            </a>
+        </div>
+        <div class="news-tech">
+            <a href="">
+                <img src="image/06.jpg" alt="">
+                <h2>
+                        كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
+                </h2>
+            </a>
+        </div>
+        <div class="news-tech">
+            <a href="">
+                <img src="image/07.jpg" alt="">
+                <h2>
+                        كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
+                </h2>
+            </a>
+        </div>
+        <div class="news-tech">
+            <a href="">
+                <img src="image/08.jpg" alt="">
+                <h2>
+                        كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
+                </h2>
+            </a>
+        </div>
+        
+    </section>
 </body>
 </html>
