--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a class="menu-bar">الرئيسية <i class="fas fa-home"></i></a>
         <a class="menu-bar">أخبار <i class="fas fa-newspaper"></i></a>
         <a class="menu-bar">مقالات <i class="far fa-newspaper"></i></i></a>
+        <a class="menu-bar">تقارير <i class="far fa-clipboard"></i></a>
+        <a class="menu-bar">بيانات صحفية <i class="fas fa-camera"></i></a>
         <a class="menu-bar">إعلانات <i class="fas fa-headset"></i></a>
         <form action="">
             <input type="search" class="search" name="search" placeholder="Search" id="">
