--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Markazi+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Almarai&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lateef&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome-free/css/all.css">
     <link rel="stylesheet" href="style.css">
@@ -91,8 +91,52 @@
                         كل ما تود معرفته عن الهواتف المجددة وكيف تحصل على هاتف جديد بسعر رخيص
                 </h2>
             </a>
-        </div>
-        
+        </div> 
     </section>
+
+
+    <article>
+        <h2>:آخر المقالات</h2>
+        <div class="art">
+            <a href="">
+                <img src="image/06.jpg" alt="">
+                <p>
+                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
+                </p>
+            </a>
+        </div>
+        <div class="art">
+            <a href="">
+                <img src="image/07.jpg" alt="">
+                <p>
+                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
+                </p>
+            </a>
+        </div>
+        <div class="art">
+            <a href="">
+                <img src="image/08.jpg" alt="">
+                <p>
+                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
+                </p>
+            </a>
+        </div>
+        <div class="art">
+            <a href="">
+                <img src="image/09.jpg" alt="">
+                <p>
+                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
+                </p>
+            </a>
+        </div>
+        <div class="art">
+            <a href="">
+                <img src="image/10.jpg" alt="">
+                <p>
+                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
+                </p>
+            </a>
+        </div>
+    </article>
 </body>
 </html>
