--- a/index.html
+++ b/index.html
@@ -138,5 +138,10 @@
             </a>
         </div>
     </article>
+
+    <header>
+        <h1>بيانات صحفية</h1>
+        <div class="hr"></div>
+    </header>
 </body>
 </html>
