--- a/index.html
+++ b/index.html
@@ -41,6 +41,47 @@
             <a href=""><img src="image/04.jpg" alt=""></a>
             <a href=""><img src="image/05.jpg" alt=""></a>
         </div>
+         <div style="margin-top: 100px; display: flex;
+                justify-content: center; height: auto;" id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div style=" height: 200px;" class="carousel-item active">
+      <img src="mountains-3959204_640.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>:آخر الأخبار</h5>
+        <p>هنا ستكون عناوين آخر الأخبار و المقالات</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="mountains-3959204_640.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>:آخر الأخبار</h5>
+        <p>هنا ستكون عناوين آخر الأخبار و المقالات</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="mountains-3959204_640.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>:آخر الأخبار</h5>
+        <p>هنا ستكون عناوين آخر الأخبار و المقالات.</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> 
+    
+        
     </main>
     <h1>:آخر الأخبار</h1>
     <section>
