--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body id="body-theme">
-    <div class="menu">
+    <div class="menu" id="menu1">
         <a class="menu-bar">الرئيسية <i class="fas fa-home"></i></a>
         <a class="menu-bar">أخبار <i class="fas fa-newspaper"></i></a>
         <a class="menu-bar">مقالات <i class="far fa-newspaper"></i></i></a>
@@ -101,7 +101,7 @@
             <a href="">
                 <img src="image/06.jpg" alt="">
                 <p>
-                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
+                     الجديد من جوجل قد يجعلك تستغنى عن Allo تطبيق whatsApp
                 </p>
             </a>
         </div>
@@ -142,6 +142,27 @@
     <header>
         <h1>بيانات صحفية</h1>
         <div class="hr"></div>
+        <div class="hr-t">
+            <img src="image/08.jpg" alt="">
+            <div class="text">
+                <h3>هنا سيكون عنوان البيان الصحفي</h3>
+                <p>
+                    تستحق الفكرة الإشادة نظراً لكونها مبتكرة وعملية للغاية، حيث أطلقت شركة Hyper المختصة في مجال ملحقات الهواتف الذكية وبنوك الطاقة كابل Lightning لشحن هواتف آيفون يمكن ارتداؤه في صورة ميدالية مفاتيح أو في صورة طوق حول الرقبة يستخدم لحمل المفاتيح أو بطاقات التعريف. الفكرة تتيح لمستخدمها حمل كابل آيفون معه في كل مكان من خلال استخدامه لغرض آخر بسيط ومفيد. الكابل يتوفر بسعر 25 دولاراً تقريباً في اصدارات مختلفة بأطوال مختلفة بداية من 20 سم وتصل حتى مترين وهو مصنوع من الألومنيوم فائق التحمل ليتحمل الثني.
+                </p>
+            </div>
+        </div>
     </header>
+
+    <footer>
+        <a href="#menu1" class="back"><i class="fas fa-angle-up"></i></a>
+        <p>© Copyright 2019, All Rights Reserved</p>
+        <div class="social">
+            <a href="" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="" class="snapchat"><i class="fas fa-bell"></i></a>
+            <a href="" class="youtube"><i class="fab fa-youtube"></i></a>
+            <a href="" class="instagram"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
