--- a/index.html
+++ b/index.html
@@ -157,12 +157,14 @@
         <a href="#menu1" class="back"><i class="fas fa-angle-up"></i></a>
         <p>© Copyright 2019, All Rights Reserved</p>
         <div class="social">
-            <a href="" class="facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="" class="snapchat"><i class="fas fa-bell"></i></a>
-            <a href="" class="youtube"><i class="fab fa-youtube"></i></a>
-            <a href="" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a class="facebook" onclick="facebook()"><i class="fab fa-facebook-f"></i></a>
+            <a class="twitter" onclick="twitter()"><i class="fab fa-twitter"></i></a>
+            <a class="snapchat" onclick="snapchat()"><i class="fas fa-bell"></i></a>
+            <a class="youtube" onclick="youtube()"><i class="fab fa-youtube"></i></a>
+            <a class="instagram" onclick="instagram()"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
