--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Markazi+Text&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Almarai&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lateef&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome-free/css/all.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -21,17 +17,18 @@
         <a class="menu-bar">تقارير <i class="far fa-clipboard"></i></a>
         <a class="menu-bar">بيانات صحفية <i class="fas fa-camera"></i></a>
         <a class="menu-bar">إعلانات <i class="fas fa-headset"></i></a>
-        <form action="">
+        <form action="" dir="ltr">
+            
             <input type="search" class="search" name="search" placeholder="Search" id="">
             <input type="submit" value="Search">
         </form>
     </div>
-        <div class="news-bar">
+        <div class="news-bar" dir="ltr">
             <p>هنا ستكون عناوين آخر الأخبار و المقالات</p>
         </div>
     <main>
         <div class="c1">
-            <a href=""><img src="image/01.jpg" alt=""></a>
+            <a href="page/news/dom.html"><img src="image/01.jpg" alt=""></a>
             <a href=""><img src="image/02.jpg" alt=""></a>
         </div>
         <div class="c2">
@@ -101,7 +98,7 @@
             <a href="">
                 <img src="image/06.jpg" alt="">
                 <p>
-                     الجديد من جوجل قد يجعلك تستغنى عن Allo تطبيق whatsApp
+                    تطبيق Allo الجديد من جوجل قد يجعلك تستغنى عن whatsApp
                 </p>
             </a>
         </div>
@@ -154,9 +151,9 @@
     </header>
 
     <footer>
-        <a href="#menu1" class="back"><i class="fas fa-angle-up"></i></a>
-        <p>© Copyright 2019, All Rights Reserved</p>
-        <div class="social">
+        <a href="#menu1" title="TOP" class="back"><i class="fas fa-angle-up"></i></a>
+        <p dir="ltr">© Copyright 2019, All Rights Reserved</p>
+        <div class="social" dir="ltr">
             <a class="facebook" onclick="facebook()"><i class="fab fa-facebook-f"></i></a>
             <a class="twitter" onclick="twitter()"><i class="fab fa-twitter"></i></a>
             <a class="snapchat" onclick="snapchat()"><i class="fas fa-bell"></i></a>
